<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yocto-Toolbox</string>
    <string name="action_settings">Settings</string>
    <string name="icon_of_the_yoctohub">Icon of the YoctoHub</string>
    <string name="title_activity_hub_discovery">Hubs nearby</string>
    <string name="title_activity_hub_detail">YoctoHub details</string>
    <string name="open_hub">Open YoctoHub</string>
    <string name="module_details">Module details</string>
    <string name="icon_of_the_module">Module\'s Icon</string>
    <string name="forget_hub_">Forget hub %s ?</string>
    <string name="Yes">Yes</string>
    <string name="title_module_list">ModulesCache</string>
    <string name="title_module_detail">Module Detail</string>
    <string name="serial_number">Serial Number</string>
    <string name="product_name">Product name</string>
    <string name="firmware">Firmware</string>
    <string name="consumption">Consumption</string>
    <string name="beacon">Beacon</string>
    <string name="luminosity">Luminosity</string>
    <string name="kernel">Kernel</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="port_1">Port 1</string>
    <string name="hub_ports">Hub Ports</string>
    <string name="port_3">Port 3</string>
    <string name="port_2">Port 2</string>
    <string name="rdy_network_down">0- network down</string>
    <string name="rdy_network_exists">1- network exists</string>
    <string name="rdy_network_linked">2- network linked</string>
    <string name="rdy_lan_ready">3- LAN ready</string>
    <string name="rdy_www_ready">4- WWW ready</string>
    <string name="invalid">invalid</string>
    <string name="network">Network</string>
    <string name="readiness">Readiness</string>
    <string name="mac_address">MAC address</string>
    <string name="ip_address">IP address</string>
    <string name="operator">Operator</string>
    <string name="next_wake_up">Next wake up</string>
    <string name="power_saving">Power saving</string>
    <string name="rtc_time">RTC time</string>
    <string name="ssid">SSID</string>
    <string name="power_saving_timer">Power saving timer</string>
    <string name="wakeup_schedule_1_next_occurrence">WakeUp schedule 1, next occurrence</string>
    <string name="wakeup_schedule_2_next_occurrence">WakeUp schedule 2, next occurrence</string>
    <string name="port_4">Port 4</string>
    <string name="sleep_not_configured">sleep not configured</string>
    <plurals name="sleep_in_X_sec">
        <item quantity="one">sleep in %d seccond</item>
        <item quantity="other">sleep in %d seconds</item>
    </plurals>
    <string name="power_saving_switch_is_off">power-saving switch is OFF</string>
    <string name="not_set">not set</string>
    <string name="n_a">N/A</string>
    <string name="not_configured">not configured</string>
    <string name="sensors">Sensors</string>
    <string name="tilt_roll">Tilt Roll</string>
    <string name="tilt_pitch">Tilt Pitch</string>
    <string name="compass">Compass</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="accelerometer_x">Accelerometer X</string>
    <string name="accelerometer_y">Accelerometer Y</string>
    <string name="accelerometer_z">Accelerometer Z</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="magnetometer_x">Magnetometer X</string>
    <string name="magnetometer_y">Magnetometer Y</string>
    <string name="magnetometer_z">Magnetometer Z</string>
    <string name="gyro">Gyro</string>
    <string name="gyro_x">Gyro X</string>
    <string name="gyro_y">Gyro Y</string>
    <string name="gyro_z">Gyro Z</string>
    <string name="min">Min</string>
    <string name="current">Current</string>
    <string name="max">Max</string>
    <string name="sensor_1">Sensor 1</string>
    <string name="sensor_2">Sensor 2</string>
    <string name="actuators">Actuators</string>
    <string name="dc">DC</string>
    <string name="ac">AC</string>
    <string name="voltage">Voltage</string>
    <string name="power">Power</string>
    <string name="cos_phi">Cos Φ</string>
    <string name="energy">Energy</string>
    <string name="reset">Reset</string>
    <string name="about_text"><![CDATA[
        If you have trouble with %1$s application please contact  <a href="mailto:support@yoctopuce.com">support@yoctopuce.com</a><br><br>
        Application version: %2$s<br><br>
        Yoctopuce API : %3$s<br><br>
        <a href="https://www.yoctopuce.com">www.yoctopuce.com</a>
    ]]></string>
    <string name="action_about">About</string>
    <string name="get_user_manual">Get user manual</string>
    <string name="www_yoctopuce_com_dev_doc_url">https://www.yoctopuce.com/EN/doc/devicedoc.php?prefix=</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="maximum_value">Maximum value</string>
    <string name="minimum_value">Minimum value</string>
    <string name="current_value">Current value</string>
    <string name="altitude">Altitude</string>
    <string name="current_illumination">Current illumination</string>
    <string name="min_illumination">Min illumination</string>
    <string name="max_illumination">Max illumination</string>
    <string name="max_current">Max current</string>
    <string name="min_current">Min current</string>
    <string name="current_current">Current current</string>
    <string name="current_voltage">Current voltage</string>
    <string name="min_voltage">Min voltage</string>
    <string name="max_voltage">Max voltage</string>
    <string name="max_temperature">Max temperature</string>
    <string name="min_temperature">Min temperature</string>
    <string name="current_temperature">Current temperature</string>
    <string name="make_sure_your_device_is_configured_according_to_your_pt100_type">Make sure your device is configured according to your PT100 type.</string>
    <string name="thermistor">Thermistor</string>
    <string name="thermocouple">Thermocouple</string>
    <string name="gps_data">GPS Data</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ground_speed">Ground speed</string>
    <string name="dilution_of_precision">Dilution of Precision</string>
    <string name="fixing___">fixing…</string>
    <plurals name="x_satellites">
        <item quantity="one">%d satellite</item>
        <item quantity="other">%d satellites</item>
    </plurals>
    <string name="pressed">pressed</string>
    <string name="released">released</string>
    <string name="text_to_display">Text to display</string>
    <string name="display">Display</string>
    <string name="co2_sensor">CO2 Sensor</string>
    <string name="voc_level">VOC level</string>
    <string name="voc_data_are_shown_in_ppm_by_volume_co2_equivalent_prediction">VOC data are shown in ppm by volume (CO2 equivalent prediction).</string>
    <string name="pre_heating_please_wait">Pre-heating, please wait</string>
    <string name="co2_data_are_shown_in_ppm_by_volume">CO2 data are shown in ppm by volume</string>
    <string name="edit_hub">Edit hub</string>
    <string name="hello">Hello</string>
    <string name="save">Save</string>
    <string name="test_connection">Test connection</string>
    <string name="hostname_ip">Hostname / IP</string>
    <string name="port_number">Port number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="success">Success</string>
    <string name="add_hub_manual">Add Hub (manual)</string>
    <string name="saved">Saved</string>
    <string name="frequency">Frequency</string>
    <string name="volume">Volume</string>
    <string name="buzzer">Buzzer</string>
    <string name="leds">LEDs</string>
    <string name="buttons">Buttons</string>
    <string name="green_led_state">Green LED State</string>
    <string name="red_led_state">Red LED State</string>
    <string name="infra_red">Infra-red</string>
    <string name="ambient_light">Ambient light</string>
    <string name="proximity">Proximity</string>
    <string name="anbutton1" tools:ignore="Typos">anButton1</string>
    <string name="anbutton2">anButton2</string>
    <string name="channels">Channels</string>
    <string name="channel_7">Channel 7</string>
    <string name="channel_3">Channel 3</string>
    <string name="channel_6">Channel 6</string>
    <string name="channel_0">Channel 0</string>
    <string name="channel_4">Channel 4</string>
    <string name="channel_1">Channel 1</string>
    <string name="channel_5">Channel 5</string>
    <string name="channel_2">Channel 2</string>
    <string name="channel_0_direction">Channel 0 direction</string>
    <string name="channel_4_direction">Channel 4 direction</string>
    <string name="channel_1_direction">Channel 1 direction</string>
    <string name="channel_5_direction">Channel 5 direction</string>
    <string name="channel_2_direction">Channel 2 direction</string>
    <string name="channel_6_direction">Channel 6 direction</string>
    <string name="channel_3_direction">Channel 3 direction</string>
    <string name="channel_7_direction">Channel 7 direction</string>
    <string name="servo_5">Servo 5</string>
    <string name="servo_4">Servo 4</string>
    <string name="servo_3">Servo 3</string>
    <string name="servo_2">Servo 2</string>
    <string name="servo_1">Servo 1</string>
    <string name="power_mode">Power mode</string>
    <string name="ext_voltage">Ext. voltage</string>
    <string name="usb">USB</string>
    <string name="external">External</string>
    <string name="off">Off</string>
    <string name="OFF">OFF</string>
    <string name="automatic">Automatic</string>
    <string name="servos">Servos</string>
    <string name="current_loop">Current Loop</string>
    <string name="loop_power">Loop power</string>
    <string name="loop_current">Loop current</string>
    <string name="powered">Powered</string>
    <string name="low_power">Low power</string>
    <string name="not_powered">Not Powered</string>
    <string name="test_led">Test LED</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="update_yoctohub_url">Update YoctoHub URL?</string>
    <string name="update_yoctohub_descr">The YoctoHub %1$s is already known. Would you update the URL to \"%2$s\"</string>
    <string name="rgb_leds">RGB leds</string>
    <string name="app_libraries">We\'re using the following libraries:</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="device_disconnected_s">Device disconnected (%s)</string>
    <string name="discovery">Discovery</string>
    <string name="manual">Manual</string>
    <string name="display_output">display output</string>
    <string name="hello_world">hello world</string>
    <string name="_192_168_1_12">192.168.1.12</string>
    <string name="_4444">4444</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="module">Module</string>
    <string name="state">State</string>
    <string name="usb_port">usb port</string>
    <string name="VirtualHub_s">VirtualHub %1$s</string>
    <string name="YoctoHub_s">YoctoHub %1$s</string>
    <string name="no_yoctohub_or_virtualhub_configured_n_nclick_on_the_button_to_add_your_first_yoctohub">No YoctoHub or VirtualHub configured. \n\n  Click on the + button to add your first YoctoHub.</string>
    <string name="configure">Configure</string>
    <string name="device_functions">Device functions</string>
    <string name="logical_name">Logical name</string>
    <string name="device_name">Device name</string>
</resources>