<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <include layout="@layout/detail_layout_generic_module"/>

        <TextView
            style="@style/detail_section"
            android:text="@string/channels"/>

        <!--todo: Fix layout on big screen-->
        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="6"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:useDefaultMargins="true"
            >

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/channel_0"/>

            <CheckBox android:id="@+id/channel0"/>

            <ImageView
                android:id="@+id/channel0_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_0_direction"
                android:src="@drawable/left_arrow"/>



            <TextView
                android:text="@string/channel_4"
                android:layout_gravity="fill_horizontal"

                android:layout_width="wrap_content"/>

            <CheckBox android:id="@+id/channel4"/>

            <ImageView
                android:id="@+id/channel4_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_4_direction"
                android:src="@drawable/left_arrow"/>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/channel_1"/>

            <CheckBox android:id="@+id/channel1"/>

            <ImageView
                android:id="@+id/channel1_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_1_direction"
                android:src="@drawable/left_arrow"/>


            <TextView
                android:text="@string/channel_5"
                />

            <CheckBox android:id="@+id/channel5"/>

            <ImageView
                android:id="@+id/channel5_dir"
                android:layout_gravity="fill_horizontal"
                android:contentDescription="@string/channel_5_direction"
                android:src="@drawable/left_arrow"/>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/channel_2"/>

            <CheckBox android:id="@+id/channel2"/>

            <ImageView
                android:id="@+id/channel2_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_2_direction"
                android:src="@drawable/left_arrow"/>


            <TextView
                android:text="@string/channel_6"
                />

            <CheckBox android:id="@+id/channel6"/>

            <ImageView
                android:id="@+id/channel6_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_6_direction"
                android:src="@drawable/left_arrow"/>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/channel_3"/>

            <CheckBox android:id="@+id/channel3"/>

            <ImageView
                android:id="@+id/channel3_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_3_direction"
                android:src="@drawable/left_arrow"/>


            <TextView
                android:text="@string/channel_7"
                />

            <CheckBox android:id="@+id/channel7"/>

            <ImageView
                android:id="@+id/channel7_dir"
                android:layout_gravity="center"
                android:contentDescription="@string/channel_7_direction"
                android:src="@drawable/left_arrow"/>

        </GridLayout>

    </LinearLayout>
</ScrollView>